--- a/_posts/网络笔记.markdown
+++ b/_posts/网络笔记.markdown
@@ -1,26 +1,77 @@
 #一.前言
-## 最近遇到一些网络问题，查找到了一些资料，正好做一些笔记记录过程
+## 最近遇到一些网络问题，查找到了一些资料，正好做一些笔记记录查资料时学习到的知识
 
 
 ### 1. ARP协议
-#### 三个关键概念
 
 * ARP（Address Resolution Protocol）即地址解析协议， 用于实现从 IP 地址到 MAC 地址的映射，即询问目标IP对应的MAC地址。
 
-* 在网络通信中，主机和主机通信的数据包需要依据OSI模型从上到下进行数据封装，当数据封装完整后，再向外发出。所以在局域网的通信中，不仅需要源目IP地址的封装，也需要源目MAC的封装。
+#### 三个关键概念
 
-* 一般情况下，上层应用程序更多关心IP地址而不关心MAC地址，所以需要通过ARP协议来获知目的主机的MAC地址，完成数据封装。
+* 在以太网协议中规定，同一局域网中的一台主机要和另一台主机进行直接通信，必须要知道目标主机的MAC地址。而在TCP/IP协议中，网络层和传输层只关心目标主机的IP地址。这就导致在以太网中使用IP协议时，数据链路层的以太网协议接到上层IP协议提供的数据中，只包含目的主机的IP地址。于是需要一种方法，根据目的主机的IP地址，获得其MAC地址。这就是ARP协议要做的事情。所谓地址解析（address resolution）就是主机在发送帧前将目标IP地址转换成目标MAC地址的过程。
+
+* 另外，当发送主机和目的主机不在同一个局域网中时，即便知道目的主机的MAC地址，两者也不能直接通信，必须经过路由转发才可以。所以此时，发送主机通过ARP协议获得的将不是目的主机的真实MAC地址，而是一台可以通往局域网外的路由器的MAC地址。于是此后发送主机发往目的主机的所有帧，都将发往该路由器，通过它向外发送。这种情况称为委托ARP或ARP代理（ARP Proxy）。
+
+* 在点对点链路中不使用ARP，实际上在点对点网络中也不使用MAC地址，因为在此类网络中分别已经获取了对端的IP地址。
 
 
 他主要是两个命令：
 
-1. Who has 
-2. is at
+1. Who has (ip) ? Tell (me)
+2. (ip) is at (mac)
 
 形成一问一答
 
 
 ![avatar](https://raw.githubusercontent.com/raytz/raytz.github.io/master/_data/WX20180717-123338.png)
+
+### 2. ICMP
+* 全称 Internet Control Message Protocol
+
+* ICMP概述：ICMP使用IP数据报传送。允许主机或路由器报告差错情况和提供有关异常的报告。使IP数据报转发更有效，提高交付成功的机会。 
+* 不产生ICMP差错报文的情况： 
+> 1）ICMP差错报文（但是，ICMP查询报文可能会产生） 
+> 
+> 2）目的地址是广播地址或多播地址的IP数据报。 
+> 
+> 3）作为链路层广播的数据报。 
+> 
+> 4）不是IP分片的第一片。 
+> 
+> 5）源地址不是单个主机的数据报。 
+> 
+目的是为了不产生广播风暴。 
+* ICMP的规则：ICMP差错报文必须包括生成该差错报文的数据报IP首部，还必须至少包括跟在IP首部后面的前8个字节（TCP/UDP首部等）
+
+
+## 2.1. 一次 Time-to-live exceeded 分析
+
+
+![avatar](https://raw.githubusercontent.com/raytz/raytz.github.io/master/_data/WX20180717-150131.png)
+
+当前数据包，指的是Time-to-live exceeded数据包的协议栈
+
+
+![avatar](https://raw.githubusercontent.com/raytz/raytz.github.io/master/_data/WX20180717-150559.png)
+
+这个是数据包带的信息
+
+![avatar](https://raw.githubusercontent.com/raytz/raytz.github.io/master/_data/WX20180717-150719.png)
+
+这里面描述的是TimeToLive只有1了，所以是个失败的应答。而具体是哪个请求失败了呢，是下面Transmission Control Protocol的信息
+
+## 2.2. ICMP协议例子：Ping
+
+如下图：
+
+
+![avatar](https://raw.githubusercontent.com/raytz/raytz.github.io/master/_data/WX20180717-200348@2x.png)
+
+可以看到，一次ping由request和reply组成
+
+## 2.3. ICMP协议例子：Traceroute
+
+![avatar](https://raw.githubusercontent.com/raytz/raytz.github.io/master/_data/WX20180718-141839.png)
 
 
 # 一些命令
@@ -31,3 +82,10 @@
 # 参考资料
 
 <a href=https://zhuanlan.zhihu.com/p/28771785>图解ARP协议（一）</a>
+
+<a href=https://zh.wikipedia.org/zh-hans/%E5%9C%B0%E5%9D%80%E8%A7%A3%E6%9E%90%E5%8D%8F%E8%AE%AE>ARP 地址解析协议</a>
+
+<a href=https://zh.wikipedia.org/zh-hans/%E4%BA%92%E8%81%94%E7%BD%91%E6%8E%A7%E5%88%B6%E6%B6%88%E6%81%AF%E5%8D%8F%E8%AE%AE>ICMP 互联网控制消息协议</a>
+
+
+<a href=https://zh.wikipedia.org/zh-hans/Ping>Ping</a>
